# pyroll-basic

./: LICENSE  README.md  hatch.toml  pyproject.toml
pyroll/: basic.py
tests/: test_solve.py  test_solve_3rp_hex_75_2.py  test_solve_3rp_overhagen_2012.py  test_solve_imf_semi_continuous_8_mm.py  test_solve_imf_three_high_reversing_mill_mm.py  test_solve_konti.py  test_solve_sag_kalibreur.py  test_solve_without_coulomb.py
