[tool.poetry]
name = "pyroll-basic"
version = "2.1"
description = "A meta package for installing quickly the PyRolL core and a set of basic plugins and extensions."
authors = ["Max Weiner <max.weiner@imf.tu-freiberg.de>"]
license = "BSD-3-Clause"
homepage = "https://pyroll.readthedocs.io/en/latest"
repository = "https://github.com/pyroll-project/pyroll-basic"
documentation = "https://github.com/pyroll-project/pyroll-basic/blob/main/README.md"
readme = "README.md"
packages = [
    {include = "pyroll/basic.py" }
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.9"
pyroll-core = "^2.1"
pyroll-cli = "^2.1"
pyroll-report = "^2.1"
pyroll-export = "^2.0"
pyroll-integral-thermal = "^2.0"
pyroll-hensel-power-and-labour = "^2.0"
pyroll-wusatowski-spreading = "^2.0"
pyroll-zouhar-contact = "^2.0"
pyroll-freiberg-flow-stress = "^2.0"
pyroll-lendl-equivalent-method = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
